objects/ssot__AcademicSession__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcademicSessionSeason__c</fullName>
        <label>Season</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicSessionType__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AcademicTermId__c</fullName>
        <label>Academic Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AddDropDeadlineDateTime__c</fullName>
        <label>Add Drop Deadline Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__AuditDueDateTime__c</fullName>
        <label>Audit Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClassEndDateTime__c</fullName>
        <label>Class End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ClassStartDateTime__c</fullName>
        <label>Class Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CourseWithdrawDeadlineDateTime__c</fullName>
        <label>Course Withdraw Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExamEndDateTime__c</fullName>
        <label>Exam End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExamStartDateTime__c</fullName>
        <label>Exam Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Academic Session Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResultAvailabilityDateTime__c</fullName>
        <label>ResultAvailabilityDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ResultDueDateTime__c</fullName>
        <label>ResultDueDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817603066_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicSession_AcademicTermId_map_A_rel</label>
        <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
        <relationshipLabel>AcademicSession_AcademicTermId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1719817603066_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>